unpackaged/main/default/objects/Opportunity_Related_Tracking__c/Opportunity_Related_Tracking__c.object-meta.xml
<CustomObject>
    <label>Opportunity Related Tracking</label>
    <nameField>
        <displayFormat>ORT-{0000000}</displayFormat>
        <label>Opportunity Related Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Related Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>