unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Connects__c.field-meta.xml
<CustomField>
    <fullName>Connects__c</fullName>
    <label># Connects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>