unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/First_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Date__c</fullName>
    <label>First Call Date</label>
    <type>DateTime</type>
</CustomField>