unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/First_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Stage_Change_Date__c</fullName>
    <label>First Stage Change Date</label>
    <type>DateTime</type>
</CustomField>