unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Lead_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Time__c</fullName>
    <formula>Opportunity__r.Lead_Created_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date Time</label>
    <type>DateTime</type>
</CustomField>