unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <label>Opportunity Created Date</label>
    <type>DateTime</type>
</CustomField>