unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Sbiz_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Sbiz_Eligible__c</fullName>
    <description>Consolidate sbiz eligible data</description>
    <formula>AND(OR
(
CONTAINS(Opportunity__r.Opportunity_Owner_Role__c,&apos;sb&apos;),
Opportunity__r.OwnerId = &apos;0058Y00000BKtzn&apos;,
Opportunity__r.OwnerId = &apos;00516000006bBtV&apos;
),
ISBLANK(Opportunity__r.Referred_By_ID__c),
Opportunity__r.Sold_By__c = null,
Opportunity__r.IsClosed = false,
Opportunity__r.No_Phone_Bad_Number__c = false,
Opportunity__r.Is_Fraud__c = false,
Opportunity__r.Potential_Fraud_Opportunity_Formula__c = false,
Opportunity__r.ZP_Company_Approval_Status__c != &apos;rejected&apos;,
Opportunity__r.ZP_Company_ID__c != null,
Opportunity__r.RecordType.Name = &apos;Company Opportunity&apos;,
Opportunity__r.Account_Overall_Status__c != &apos;Suspended&apos;
)</formula>
    <label>Sbiz Eligible</label>
    <type>Checkbox</type>
</CustomField>