unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Time_To_First_Activity__c.field-meta.xml
<CustomField>
    <fullName>Time_To_First_Activity__c</fullName>
    <label>Time To First Activity(Business Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>