unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Unique_Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opp_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Opp Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>