unpackaged/main/default/objects/Opportunity_Related_Tracking__c/fields/Voicemails__c.field-meta.xml
<CustomField>
    <fullName>Voicemails__c</fullName>
    <label># Voicemails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>